# CIDEPINT

./: .gitignore  README.md  package-lock.json
admin/: app.py  pyproject.toml
admin/src/core/: __init__.py  database.py  seeds.py  session.py
admin/src/core/model/auth/: __init__.py  user.py
admin/src/core/model/combined_tables/: __init__.py  role_has_permit.py  user_has_role.py
admin/src/core/model/days_hours/: __init__.py  days_hours.py
admin/src/core/model/institucion/: __init__.py  institucion.py
admin/src/core/model/maintence/: __init__.py  maintence.py
admin/src/core/model/pagination/: __init__.py  pagination.py
admin/src/core/model/request/: __init__.py  adjuntos.py  service_request.py
admin/src/core/model/servicio/: __init__.py  servicio.py
admin/src/web/: __init__.py  blueprints.py  client_secret.json  config.py  email_config.py  error.py
admin/src/web/controllers/: auth.py  home.py  institutions.py  services.py  users.py
admin/src/web/forms/: forms.py
admin/src/web/helpers/: auth.py  geocodificacion.py  ids_estados.py  list_sorting.py  validations.py
admin/src/web/templates/: error.html  footer.html  header.html  layout.html
admin/src/web/templates/home/: config_pagination.html  confirm_maintence.html  confirmation.html  home.html  (+4 more)
admin/static/css/home/: basicStyles.css  home.css  login.css
admin/static/css/institutions/: create.css  index.css  info.css
admin/static/css/services/: create.css  delete.css  modify.css  request_service.css
admin/static/css/users/: index.css  modify.css  profile.css
admin/tests/: test_web.py
(+59 files in other folders)
