[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["CASTILLO FRANCO EZEQUIEL <franco.ezequiel.castillo@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
psycopg2-binary = "^2.9.7"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-session = "^0.5.0"
sqlalchemy = "^2.0.21"
flask-wtf = "^1.2.1"
flask-mail = "^0.9.1"
flask-jwt-extended = "^4.5.3"
geopy = "^2.4.0"
google-auth-oauthlib = "^1.1.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flask-wtf = "^1.2.1"
wtforms = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
